--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
       <!-- carrusel -->
       <section
         id="carouselOfertas"
-        class="carousel slide mt-5"
+        class="carousel slide"
         data-bs-ride="carousel"
+        data-bs-interval="4000"
       >
         <div class="carousel-indicators">
           <button
@@ -445,7 +446,6 @@
             <div class="border col-12 col-md-6 col-lg-6 d-none d-md-block p-0">
               <div
                 class="card container d-flex justify-content-center align-items-center w-100 h-100 p-0"
-                style=""
               >
                 <img
                   src="./img/publicidades/tarjetas de credito.webp"
