--- a/pages/telefono1.html
+++ b/pages/telefono1.html
@@ -63,31 +63,78 @@
         </nav>
     </header>
     <main>
-       <section class="container my-5 d-flex justify-content-center">
-  <div class="card shadow-lg border-0 rounded-4 overflow-hidden" style="max-width: 1300px; width: 100%;">
-    <div class="row g-0">
-      <!-- Imagen del producto -->
-      <div class="col-md-5">
-        <img src="../img/productos/Samsung-Zflip5.jpg" class="img-fluid object-fit-cover" style="width: 550px; height: 650px;" alt="Producto" />
-      </div>
-
-      <!-- Cuerpo de la card -->
-      <div class="col-md-7">
-        <div class="card-body p-4">
-          <h5 class="card-title display-6">Nombre del producto</h5>
-          <p class="card-text fs-5 text-muted">
-            Descripción breve del producto. Ideal para destacar características, beneficios o una llamada a la acción.
-          </p>
-          <p class="card-text fs-4 text-success">
-            <strong>$ 12.999</strong>
-          </p>
-          <a href="#" class="btn btn-primary btn-lg mt-3">Comprar ahora</a>
+      <section class="container my-5 d-flex justify-content-center">
+        <div class="card shadow-lg border-0 rounded-4 overflow-hidden pb-5" style="max-width: 1300px; width: 100%;">
+        <div class="row g-0">
+        <!-- Imagen del producto -->
+        <div class="col-md-5">
+        <img src="../img/productos/Samsung-Zflip5.jpg" class="img-fluid object-fit-cover my-5" style="width: 550px; height: 650px;" alt="Producto" />
         </div>
+        <!-- Cuerpo de la card -->
+        <div class="col-md-7">
+        <div class="card-body p-4">
+          <a href="#" class="fs-5 mb-5 text-decoration-none">Ver más productos marca Samsung</a>
+          <p class="mt-3 fs-5 text-secondary">Reacondicionado | +50 vendidos</p>
+          <h5 class="display-6 mb-4 text-black"><b>Samsung Galaxy Z Flip 5 5G Dual SIM 128 GB white 8 GB RAM - Aceptable (Reacondicionado)</b></h5>
+          <p class="fs-4 text-secondary"><del>$ 660.000</del></p>
+          <p class="fs-1 text-dark">$ 361.185 <strong class="fs-5 text-success"> 45% OFF</strong></p>
+          <p class="fs-6 text-secondary">Precio sin impuestos nacionales: $ 298.500</p>
+
+        </div>
+       </div>
       </div>
     </div>
-  </div>
-</section>
-
+      </section>
+      <section class="container">
+        <div class="card p-3 border-0">
+           <form>
+             <!--Cuotas-->
+             <div class="position-relative border rounded-4 p-4 mb-3 w-100">
+               <input class="form-check-input position-absolute top-0 end-0 m-3" type="radio" name="opcionPago" id="opcion1" checked>
+               <label class="form-check-label w-100" for="opcion1">
+                 <div class="d-flex flex-column">
+                   <h3 class="fs-5"><strong>En cuotas</strong></h3>
+                   <p class="fs-4 text-black">$ 451.481</p>
+                   <p class="text-success mb-3">Mismo precio en 9 cuotas de $ 50.164,56</p>
+                   <p class="mt-2"><strong class="text-success">Llega gratis</strong> el lunes</p>
+                   <a href="#" class="text-decoration-none mb-4">Más formas de entrega</a>
+                   <div class="mb-3">
+                    <label class="form-label fw-bold">Stock disponible</label>
+                    <div class="d-flex align-items-center">
+                      <label class="me-2">Cantidad:</label>
+                      <select class="form-select form-select-sm w-auto">
+                        <option value="1" selected>1 unidad</option>
+                        <option value="2">2 unidades</option>
+                        <option value="3">3 unidades</option>
+                        <option value="4">4 unidades</option>
+                        <option value="5">5 unidades</option>
+                        <option value="6">6 unidades</option>
+                      </select>
+                      <small class="text-muted ms-2">(+5 disponibles)</small>
+                     </div>
+                    </div>
+                  </div>
+               </label>
+               <a href="#" class="btn btn-primary btn-lg mt-3 me-3"><strong>Comprar ahora</strong></a>
+               <a href="#" class="btn bg-primary-subtle text-primary btn-lg mt-3"><strong>Agregar al carrito</strong></a>
+             </div>
+             <!--pagoUnico-->
+             <div class="position-relative border rounded-4 p-4 mb-3 w-100">
+               <input class="form-check-input position-absolute top-0 end-0 m-3" type="radio" name="opcionPago" id="opcion1" checked>
+               <label class="form-check-label w-100" for="opcion1">
+                 <div class="d-flex flex-column">
+                   <h3 class="fs-5"><strong>En cuotas</strong></h3>
+                   <p class="fs-4 text-black">$ 451.481</p>
+                   <p class="text-success">Mismo precio en 9 cuotas de $ 50.164,56</p>
+                   <p><strong class="text-success">Llega gratis</strong> el lunes</p>
+                   
+                 </div>
+               </label>
+               <a href="#" class="btn btn-primary btn-lg mt-3">Comprar ahora</a>
+             </div>
+           </form>
+         </div>
+      </section>
     </main>
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
         <div class="container">
