--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,53 +14,105 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-primary-subtle py-3">
-            <div class="container-fluid ">
-              <a class="navbar-brand d-flex justify-content-end" href="../index.html">
-                <img src="../img/EH1.png" alt="icono" class="img-fluid me-2" style="width: 65px; height: 45px;">
-                <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
-              </a>
-              <!--Carrito en dispositivos pequeños-->
-              <a href="#" class="d-lg-none ms-1 me-4 position-relative">
-                    <i class="bi bi-cart3" style="font-size: 1.8rem; color: #000;"></i>
-                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"> 3
-                    <span class="visually-hidden">productos en el carrito</span>
-                    </span>
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <form class="me-3 d-flex" role="search">
-                    <button class="btn btn-outline-primary me-2" type="submit"><i class="bi bi-search"></i></button>
-                    <input class="form-control me-3" type="search" placeholder="Buscar productos..." aria-label="Buscar" />
-                  </form>
-                  <li class="nav-item">
-                    <a class="nav-link me-5" href="../index.html">Inicio</a>
+      <nav class="navbar navbar-expand-lg bg-primary-subtle py-3">
+        <div class="container-fluid">
+          <a
+            class="navbar-brand d-flex justify-content-end"
+            href="./error404.html"
+          >
+            <img
+              src="../img/EH1.png"
+              alt="icono"
+              class="img-fluid me-2 imgnav"
+            />
+            <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
+          </a>
+          <!--Carrito en dispositivos pequeños-->
+          <a href="#" class="d-lg-none ms-1 me-4 position-relative">
+            <i class="bi bi-cart3 carrito"></i>
+            <span
+              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+            >
+              3
+              <span class="visually-hidden">productos en el carrito</span>
+            </span>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbar"
+            aria-controls="navbar"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <form class="me-3 d-flex" role="search">
+                <button class="btn btn-outline-primary me-2" type="submit">
+                  <i class="bi bi-search"></i>
+                </button>
+                <input
+                  class="form-control me-3"
+                  type="search"
+                  placeholder="Buscar productos..."
+                  aria-label="Buscar"
+                />
+              </form>
+              <li class="nav-item">
+                <a
+                  class="nav-link me-5"
+                  href="../index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link me-5" href="#">Novedades</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link me-4 dropdown-toggle"
+                  href="#"
+                  id="menudropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  >Opciones</a
+                >
+                <ul class="dropdown-menu" aria-labelledby="menudropdown">
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="bi bi-caret-right"></i> Login</a
+                    >
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link me-5" href="#">Novedades</a>
+                  <li>
+                    <a class="dropdown-item" href="./registro.html"
+                      ><i class="bi bi-caret-right"></i> Registrarse</a
+                    >
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link me-4 dropdown-toggle" href="#" id="menudropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Opciones</a>
-                    <ul class="dropdown-menu" aria-labelledby="menudropdown">
-                      <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right"></i> Login</a></li>
-                      <li><a class="dropdown-item" href="./registro.html"><i class="bi bi-caret-right"></i> Registrarse</a></li>
-                      <li><a class="dropdown-item" href="../pages/contacto.html"><i class="bi bi-caret-right"></i> Contacto</a></li>
-                    </ul>
+                  <li>
+                    <a class="dropdown-item" href="./contacto.html"
+                      ><i class="bi bi-caret-right"></i> Contacto</a
+                    >
                   </li>
                 </ul>
-              </div>
-              <!--Carrito en pantallas large-->
-              <a href="#" class="ms-4 d-none d-lg-block me-4 position-relative">
-                    <i class="bi bi-cart3" style="font-size: 1.8rem; color: #000;"></i>
-                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"> 3
-                    <span class="visually-hidden">productos en el carrito</span>
-                    </span>
-              </a>
-            </div>
-        </nav>
+              </li>
+            </ul>
+          </div>
+          <!--Carrito en pantallas large-->
+          <a href="#" class="ms-4 d-none d-lg-block me-4 position-relative">
+            <i class="bi bi-cart3 carrito"></i>
+            <span
+              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+            >
+              3
+              <span class="visually-hidden">productos en el carrito</span>
+            </span>
+          </a>
+        </div>
+      </nav>
     </header>
     <main>
       <section class="container">
@@ -128,57 +180,114 @@
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
         <div class="container">
           <div class="row">
-             <div class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start">
-              <a href="../index.html" class=" link-underline-opacity-0 d-flex align-items-center gap-2"> <img src="../img/EH1.png" alt="icono" class="img-fluid" style="width: 130px; height: 100px;"></a>
-             </div>
-             <div class="col-12 col-md-4 col-lg-3 text-light">
+            <div
+              class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+            >
+              <a
+                href="../index.html"
+                class="link-underline-opacity-0 d-flex align-items-center gap-2"
+              >
+                <img
+                  src="../img/EH1.png"
+                  alt="icono"
+                  class="img-fluid imgfoot"
+              /></a>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 text-light">
               <ul class="list-unstyled text-center">
                 <h4 class="text-dark">Información</h4>
                 <li class="mb-1">
-                  <a href="../pages/nosotros.html" class=" link-underline-opacity-25 link-underline-opacity-100-hover">Acerca de nosotros</a>
+                  <a
+                    href="./nosotros.html"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                    >Acerca de nosotros</a
+                  >
                 </li>
                 <li class="mb-1">
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover">Servicio al cliente</a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                    >Servicio al cliente</a
+                  >
                 </li>
                 <li class="mb-1">
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover">Terminos y condiciones</a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                    >Terminos y condiciones</a
+                  >
                 </li>
                 <li>
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover">Politicas de privacidad</a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                    >Politicas de privacidad</a
+                  >
                 </li>
               </ul>
-             </div>
-             <div class="col-12 col-md-4 col-lg-3 text-light">
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 text-light">
               <ul class="list-unstyled text-center fs-5">
                 <h4 class="text-dark">Redes Sociales</h4>
                 <li class="mb-1">
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"><i class="bi bi-facebook text-primary"></i> Facebook</a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                    ><i class="bi bi-facebook text-primary"></i> Facebook</a
+                  >
                 </li>
                 <li class="mb-1">
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"><i class="bi bi-whatsapp text-success"></i> Whatsapp</a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                    ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
+                  >
                 </li>
                 <li class="mb-1">
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"><i class="bi bi-instagram text-danger"></i> Instagram</a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                    ><i class="bi bi-instagram text-danger"></i> Instagram</a
+                  >
                 </li>
                 <li class="mb-1">
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"><i class="bi bi-linkedin text-primary-emphasis"></i> Linkedin</a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                    ><i class="bi bi-linkedin text-primary-emphasis"></i>
+                    Linkedin</a
+                  >
                 </li>
               </ul>
-             </div>
-             <div class="col-12 col-md-4 col-lg-3 text-light">
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 text-light">
               <ul class="list-unstyled text-center">
                 <h4 class="text-dark">Metodos de Pago</h4>
                 <li class="mb-2 mt-2">
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover"><img src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000" alt="icono" class="img-fluid me-2" style="width: 75px; height: 60px;"></a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                    ><img
+                      src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
+                      alt="icono"
+                      class="img-fluid me-2 iconoMC"
+                  /></a>
                 </li>
                 <li>
-                  <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover"><img src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000" alt="icono" class="img-fluid me-2" style="width: 65px; height: 55px;"></a>
+                  <a
+                    href="#"
+                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                    ><img
+                      src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
+                      alt="icono"
+                      class="img-fluid me-2 iconoVisa"
+                  /></a>
                 </li>
               </ul>
-             </div>
-             </div>
+            </div>
           </div>
-          <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
+        </div>
+        <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
