--- a/pages/registro.html
+++ b/pages/registro.html
@@ -42,14 +42,13 @@
             <img
               src="../img/EH1.png"
               alt="icono"
-              class="img-fluid me-2"
-              style="width: 65px; height: 45px"
+              class="img-fluid me-2 imgnav"
             />
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
           <a href="#" class="d-lg-none ms-1 me-4 position-relative">
-            <i class="bi bi-cart3" style="font-size: 1.8rem; color: #000"></i>
+            <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
             >
@@ -84,7 +83,6 @@
               <li class="nav-item">
                 <a
                   class="nav-link me-5"
-                  aria-current="page"
                   href="../index.html"
                   >Inicio</a
                 >
@@ -124,7 +122,7 @@
           </div>
           <!--Carrito en pantallas large-->
           <a href="#" class="ms-4 d-none d-lg-block me-4 position-relative">
-            <i class="bi bi-cart3" style="font-size: 1.8rem; color: #000"></i>
+            <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
             >
@@ -296,8 +294,7 @@
                 <img
                   src="../img/EH1.png"
                   alt="icono"
-                  class="img-fluid"
-                  style="width: 130px; height: 100px"
+                  class="img-fluid imgfoot"
               /></a>
             </div>
             <div class="col-12 col-md-4 col-lg-3 text-light">
@@ -377,8 +374,7 @@
                     ><img
                       src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
                       alt="icono"
-                      class="img-fluid me-2"
-                      style="width: 75px; height: 60px"
+                      class="img-fluid me-2 iconoMC"
                   /></a>
                 </li>
                 <li>
@@ -388,8 +384,7 @@
                     ><img
                       src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
                       alt="icono"
-                      class="img-fluid me-2"
-                      style="width: 65px; height: 55px"
+                      class="img-fluid me-2 iconoVisa"
                   /></a>
                 </li>
               </ul>
@@ -397,7 +392,7 @@
           </div>
         </div>
         <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
-      </footer>
+    </footer>
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
